--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "ember": "~1.7.0",
-    "foundation": "~5.4.5"
+    "foundation": "~5.4.5",
+    "fontawesome": "~4.2.0"
   }
 }
